fix sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=votre-username_dentaflow-monorepo
-sonar.organization=votre-org
+sonar.projectKey=dgo-gco_dentaflow-project
+sonar.organization=dgo-gco
 
 sonar.sources=backend/src,frontend/src
 sonar.tests=backend/tests,frontend/src
